# claude-code-analysis

./: .gitignore  claude-code-REPL.md  claude-code-arch.md  claude-code-design-patterns.md  claude-code-queryGuard.md  claude-code-tools.md  main.py  package.json  pyproject.toml
.claude/: settings.local.json
designPatterns/behavioralPatterns/: observer-design-pattern.md  observer-event-subscription-demo.ts  observer-react-hooks-demo.tsx
docs/: _config.yml  index.md
docs/_includes/: head_custom.html
docs/_sass/: custom.scss
docs/agenticSDKs/: agentic-sdks-comparison.md
docs/designPatterns/behavioralPatterns/: command-design-pattern.md  index.md  iterator-design-pattern.md  observer-design-pattern.md  state-design-pattern.md  strategy-design-pattern.md
src/: MessageBox.jsx  README.md  code-interpreter-demo.ipynb  demo-ink.js  demo-ink.jsx  demo.jsx  index.html  observer-demo.jsx  observer-index.html  serializable-runstate-demo.py
