[project]
name = "claude-code-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-framework>=1.1.0",
    "agent-framework-azure>=0.0.0",
    "azure-identity>=1.25.3",
    "openai>=2.32.0",
    "openai-agents>=0.14.3",
]
